--- a/src/index.html
+++ b/src/index.html
@@ -117,7 +117,7 @@
                 
                 <div class="z-3 position-absolute carousel-polygon"></div>
                 
-                <div id="carouselExampleAutoplaying" class="carousel slide z-1" data-bs-ride="carousel">
+                <div id="carouselIntroduction" class="carousel slide z-1" > <!--data-bs-ride="carousel" -->
                   <div class="carousel-indicators">
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active carousel-btn" aria-current="true" aria-label="Slide 1"></button>
                     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" class="carousel-btn" aria-label="Slide 2"></button>
