feat: introduction text add and style

--- a/src/index.html
+++ b/src/index.html
@@ -150,13 +150,16 @@
 
               <div class="col-md introduction-text">
 
-                Zabývám se zakázkovou výrobou schodišť, schodnic, nerezového zábradlí z kvalitní nerez oceli, dále realizuji i skleněné výplně, dřevěná madla, nerezové točité schodiště, spirálové nebo lomené nerezové schodiště a další nejen nerezové výrobky. Můžeme nabídnout k realizaci i hliníkové zábradlí z komponentů a další výrobky z hliníku. Provádíme svářecí práce metodami MMA, MIG/ MAG, TIG.
+                <h1>Zábradlí</h1>
+                <h1>schodiště</h1>
+
+                <!-- Zabývám se zakázkovou výrobou schodišť, schodnic, nerezového zábradlí z kvalitní nerez oceli, dále realizuji i skleněné výplně, dřevěná madla, nerezové točité schodiště, spirálové nebo lomené nerezové schodiště a další nejen nerezové výrobky. Můžeme nabídnout k realizaci i hliníkové zábradlí z komponentů a další výrobky z hliníku. Provádíme svářecí práce metodami MMA, MIG/ MAG, TIG.
 
                 Pomůžeme zkonzultovat a navrhnout celou zakázku
                 Navrhneme a dodáme materiál
                 Připravíme cenovou nabídku
                 Realizaci zakázky provádíme v co nejkratším možném termínu
-                Samozřejmostí je kvalitní a detailní práce
+                Samozřejmostí je kvalitní a detailní práce -->
 
               </div>
 
