feat: start introduction text section design

--- a/src/index.html
+++ b/src/index.html
@@ -107,7 +107,7 @@
 
         <section class="introduction">
 
-          <div class="container-fluid text-center introduction-container">
+          <div class="container-fluid introduction-container">
 
             <div class="row justify-content-md-left p-0">
               
@@ -151,16 +151,17 @@
 
               <div class="offset-md-1 col-md-3 introduction-text">
 
-                <h1>Zábradlí</h1>
-                <h1>schodiště</h1>
+                <!-- text to update? -->
+                <h1>
+                  Zakázková výroba schodišť a zábradlí
+                </h1>
 
-                <!-- Zabývám se zakázkovou výrobou schodišť, schodnic, nerezového zábradlí z kvalitní nerez oceli, dále realizuji i skleněné výplně, dřevěná madla, nerezové točité schodiště, spirálové nebo lomené nerezové schodiště a další nejen nerezové výrobky. Můžeme nabídnout k realizaci i hliníkové zábradlí z komponentů a další výrobky z hliníku. Provádíme svářecí práce metodami MMA, MIG/ MAG, TIG.
+                <!-- text to update -->
+                <p>
+                  Specializujeme se na nerez, hliník a sklo. Precizní řemeslné zpracování a individuální přístup jsou pro nás samozřejmostí.
+                </p>
 
-                Pomůžeme zkonzultovat a navrhnout celou zakázku
-                Navrhneme a dodáme materiál
-                Připravíme cenovou nabídku
-                Realizaci zakázky provádíme v co nejkratším možném termínu
-                Samozřejmostí je kvalitní a detailní práce -->
+                <a href="#" class="btn btn-primary btn-lg btn-request-quote">Začněme vaši realizaci!</button></a>
 
               </div>
 
