--- a/src/index.html
+++ b/src/index.html
@@ -113,7 +113,7 @@
               
               <div class="col-xl-7 introduction-carousel p-0">
                 
-                <div class="carousel slide mask-skew-first"> <!--data-bs-ride="carousel" -->
+                <div id="carouselIntroduction" class="carousel slide mask-skew-first"> <!--data-bs-ride="carousel" -->
 
                   <div class="mask-skew-second">
 
