feat: process steps add

--- a/src/index.html
+++ b/src/index.html
@@ -157,7 +157,7 @@
                 </h1>
 
                 <!-- text to update -->
-                <p class="lead mb-xxl- mb-xl-3">
+                <p class="lead mb-xl-3">
                   Specializujeme se na nerez, hliník a sklo. Precizní řemeslné zpracování a individuální přístup jsou pro nás samozřejmostí.
                 </p>
 
@@ -178,75 +178,220 @@
 
         <section class="process">
 
-          <h2 class="mt-3 text-center">Od nápadu k realizaci...</h2>
+          <!-- <h2 class="mt-3 text-center">Od nápadu k realizaci...</h2> -->
 
           <div class="container text-center process-container">
 
-            <div class="row row-cols-5">
+            <div class="row row-cols-xl-5 row-cols-2 align-items-center">
 
-              <div class="col process-icons">
+              <div class="col process-step text-center ">
+
+                <h2 class="text-center m-0 p-xl-4 align-middle">Od nápadu k realizaci...</h2>
+
+              </div>
+
+              <div class="col process-step">
+
+                <div class="process-step-icon">
+                  <i class="fa-solid fa-pen-to-square" style="color: #ffffff;"></i>
+                </div>
+
+                <h5>Konzultace a návrh</h5>
+
+                <p>
+                  Vymyslíme řešení na míru
+                </p>
+
+              </div>
+
+              <div class="col process-step">
 
                 <p>huh</p>
 
               </div>
 
-              <div class="col process-icons">
+              <div class="col process-step">
+
+                <div class="process-step-icon">
+                  <i class="fa-solid fa-pen-to-square" style="color: #ffffff;"></i>
+                </div>
+
+                <h5>Konzultace a návrh</h5>
+
+                <p>
+                  Vymyslíme řešení na míru
+                </p>
+
+              </div>
+
+              <div class="col process-step">
 
                 <p>huh</p>
 
               </div>
 
-              <div class="col process-icons">
+              <div class="col process-step">
+
+                <div class="process-step-icon">
+                  <i class="fa-solid fa-pen-to-square" style="color: #ffffff;"></i>
+                </div>
+
+                <h5>Konzultace a návrh</h5>
+
+                <p>
+                  Vymyslíme řešení na míru
+                </p>
+
+              </div>
+
+              <div class="col process-step">
 
                 <p>huh</p>
 
               </div>
 
-              <div class="col process-icons">
+              <div class="col process-step">
+
+                <div class="process-step-icon">
+                  <i class="fa-solid fa-pen-to-square" style="color: #ffffff;"></i>
+                </div>
+
+                <h5>Konzultace a návrh</h5>
+
+                <p>
+                  Vymyslíme řešení na míru
+                </p>
+
+              </div>
+
+              <div class="col process-step">
 
                 <p>huh</p>
 
               </div>
 
-              <div class="col process-icons">
+              <div class="col process-step">
 
-                <p>huh</p>
+                <div class="process-step-icon">
+                  <i class="fa-solid fa-pen-to-square" style="color: #ffffff;"></i>
+                </div>
 
-              </div>
+                <h5>Konzultace a návrh</h5>
 
-              <div class="col process-icons">
-
-                <p>huh</p>
-
-              </div>
-
-              <div class="col process-icons">
-
-                <p>huh</p>
-
-              </div>
-
-              <div class="col process-icons">
-
-                <p>huh</p>
-
-              </div>
-
-              <div class="col process-icons">
-
-                <p>huh</p>
-
-              </div>
-
-              <div class="col process-icons">
-
-                <p>huh</p>
+                <p>
+                  Vymyslíme řešení na míru
+                </p>
 
               </div>
 
             </div>
 
+            <div class="row row-cols-xl-5 row-cols-2 align-items-center">
+
+              <div class="col process-step text-center ">
+
+                <h2 class="text-center m-0 p-xl-4 align-middle">Od nápadu k realizaci...</h2>
+
+              </div>
+
+              <div class="col process-step">
+
+                <div class="process-step-icon">
+                  <i class="fa-solid fa-pen-to-square" style="color: #ffffff;"></i>
+                </div>
+
+                <h5>Konzultace a návrh</h5>
+
+                <p>
+                  Vymyslíme řešení na míru
+                </p>
+
+              </div>
+
+              <div class="col process-step">
+
+                <p>huh</p>
+
+              </div>
+
+              <div class="col process-step">
+
+                <div class="process-step-icon">
+                  <i class="fa-solid fa-pen-to-square" style="color: #ffffff;"></i>
+                </div>
+
+                <h5>Konzultace a návrh</h5>
+
+                <p>
+                  Vymyslíme řešení na míru
+                </p>
+
+              </div>
+
+              <div class="col process-step">
+
+                <p>huh</p>
+
+              </div>
+
+              <!-- <div class="col process-step">
+
+                <div class="process-step-icon">
+                  <i class="fa-solid fa-pen-to-square" style="color: #ffffff;"></i>
+                </div>
+
+                <h5>Konzultace a návrh</h5>
+
+                <p>
+                  Vymyslíme řešení na míru
+                </p>
+
+              </div> -->
+
+              <!-- <div class="col process-step">
+
+                <p>huh</p>
+
+              </div> -->
+<!-- 
+              <div class="col process-step">
+
+                <div class="process-step-icon">
+                  <i class="fa-solid fa-pen-to-square" style="color: #ffffff;"></i>
+                </div>
+
+                <h5>Konzultace a návrh</h5>
+
+                <p>
+                  Vymyslíme řešení na míru
+                </p>
+
+              </div> -->
+
+              <!-- <div class="col process-step">
+
+                <p>huh</p>
+
+              </div> -->
+
+              <!-- <div class="col process-step">
+
+                <div class="process-step-icon">
+                  <i class="fa-solid fa-pen-to-square" style="color: #ffffff;"></i>
+                </div>
+
+                <h5>Konzultace a návrh</h5>
+
+                <p>
+                  Vymyslíme řešení na míru
+                </p>
+
+              </div> -->
+
+            </div>
+
           </div>
+
 
         </section>
 
