feat: draft process steps xl

--- a/src/index.html
+++ b/src/index.html
@@ -182,7 +182,7 @@
 
           <div class="container text-center process-container">
 
-            <div class="row row-cols-xl-5 row-cols-2 align-items-center">
+            <div class="row row-cols-xl-5 row-cols-2 align-items-center m-4 process-first-row">
 
               <div class="col process-step text-center ">
 
@@ -230,7 +230,7 @@
 
               </div>
 
-              <div class="col process-step">
+              <!-- <div class="col process-step">
 
                 <div class="process-step-icon">
                   <i class="fa-solid fa-pen-to-square" style="color: #ffffff;"></i>
@@ -282,17 +282,61 @@
                   Vymyslíme řešení na míru
                 </p>
 
-              </div>
+              </div> -->
 
+            </div>
+
+            <div class="row divider">
+              <hr class="rounded">
             </div>
 
             <div class="row row-cols-xl-5 row-cols-2 align-items-center">
 
-              <div class="col process-step text-center ">
+              <!-- <div class="col process-step text-center ">
 
                 <h2 class="text-center m-0 p-xl-4 align-middle">Od nápadu k realizaci...</h2>
 
-              </div>
+              </div> -->
+
+              <!-- <div class="col process-step">
+
+                <div class="process-step-icon">
+                  <i class="fa-solid fa-pen-to-square" style="color: #ffffff;"></i>
+                </div>
+
+                <h5>Konzultace a návrh</h5>
+
+                <p>
+                  Vymyslíme řešení na míru
+                </p>
+
+              </div> -->
+
+              <!-- <div class="col process-step">
+
+                <p>huh</p>
+
+              </div> -->
+
+              <!-- <div class="col process-step">
+
+                <div class="process-step-icon">
+                  <i class="fa-solid fa-pen-to-square" style="color: #ffffff;"></i>
+                </div>
+
+                <h5>Konzultace a návrh</h5>
+
+                <p>
+                  Vymyslíme řešení na míru
+                </p>
+
+              </div> -->
+
+              <!-- <div class="col process-step">
+
+                <p>huh</p>
+
+              </div> -->
 
               <div class="col process-step">
 
@@ -334,26 +378,6 @@
 
               </div>
 
-              <!-- <div class="col process-step">
-
-                <div class="process-step-icon">
-                  <i class="fa-solid fa-pen-to-square" style="color: #ffffff;"></i>
-                </div>
-
-                <h5>Konzultace a návrh</h5>
-
-                <p>
-                  Vymyslíme řešení na míru
-                </p>
-
-              </div> -->
-
-              <!-- <div class="col process-step">
-
-                <p>huh</p>
-
-              </div> -->
-<!-- 
               <div class="col process-step">
 
                 <div class="process-step-icon">
@@ -366,27 +390,7 @@
                   Vymyslíme řešení na míru
                 </p>
 
-              </div> -->
-
-              <!-- <div class="col process-step">
-
-                <p>huh</p>
-
-              </div> -->
-
-              <!-- <div class="col process-step">
-
-                <div class="process-step-icon">
-                  <i class="fa-solid fa-pen-to-square" style="color: #ffffff;"></i>
-                </div>
-
-                <h5>Konzultace a návrh</h5>
-
-                <p>
-                  Vymyslíme řešení na míru
-                </p>
-
-              </div> -->
+              </div>
 
             </div>
 
