feat: continue draft for process xl

--- a/src/index.html
+++ b/src/index.html
@@ -186,20 +186,22 @@
 
               <div class="col process-step text-center ">
 
-                <h2 class="text-center m-0 p-xl-4 align-middle">Od nápadu k realizaci...</h2>
+                <h2 class="text-center m-0 p-xl-3 align-middle">Od nápadu k realizaci...</h2>
+
+                <i class="fa-solid fa-arrow-down" style="color: #3b3737;"></i>
 
               </div>
 
               <div class="col process-step">
 
                 <div class="process-step-icon">
-                  <i class="fa-solid fa-pen-to-square" style="color: #ffffff;"></i>
+                  <i class="fa-solid fa-cubes"></i>
                 </div>
 
-                <h5>Konzultace a návrh</h5>
+                <h5>Materiál a návrh</h5>
 
                 <p>
-                  Vymyslíme řešení na míru
+                  Doporučíme správný materiál a design
                 </p>
 
               </div>
@@ -213,13 +215,13 @@
               <div class="col process-step">
 
                 <div class="process-step-icon">
-                  <i class="fa-solid fa-pen-to-square" style="color: #ffffff;"></i>
+                  <i class="fa-solid fa-pen-to-square"></i>
                 </div>
 
-                <h5>Konzultace a návrh</h5>
+                <h5>Rychlá realizace</h5>
 
                 <p>
-                  Vymyslíme řešení na míru
+                  Dokončíme zakázku v co nejkratším termínu
                 </p>
 
               </div>
@@ -229,60 +231,6 @@
                 <p>huh</p>
 
               </div>
-
-              <!-- <div class="col process-step">
-
-                <div class="process-step-icon">
-                  <i class="fa-solid fa-pen-to-square" style="color: #ffffff;"></i>
-                </div>
-
-                <h5>Konzultace a návrh</h5>
-
-                <p>
-                  Vymyslíme řešení na míru
-                </p>
-
-              </div>
-
-              <div class="col process-step">
-
-                <p>huh</p>
-
-              </div>
-
-              <div class="col process-step">
-
-                <div class="process-step-icon">
-                  <i class="fa-solid fa-pen-to-square" style="color: #ffffff;"></i>
-                </div>
-
-                <h5>Konzultace a návrh</h5>
-
-                <p>
-                  Vymyslíme řešení na míru
-                </p>
-
-              </div>
-
-              <div class="col process-step">
-
-                <p>huh</p>
-
-              </div>
-
-              <div class="col process-step">
-
-                <div class="process-step-icon">
-                  <i class="fa-solid fa-pen-to-square" style="color: #ffffff;"></i>
-                </div>
-
-                <h5>Konzultace a návrh</h5>
-
-                <p>
-                  Vymyslíme řešení na míru
-                </p>
-
-              </div> -->
 
             </div>
 
@@ -292,62 +240,16 @@
 
             <div class="row row-cols-xl-5 row-cols-2 align-items-center">
 
-              <!-- <div class="col process-step text-center ">
-
-                <h2 class="text-center m-0 p-xl-4 align-middle">Od nápadu k realizaci...</h2>
-
-              </div> -->
-
-              <!-- <div class="col process-step">
-
-                <div class="process-step-icon">
-                  <i class="fa-solid fa-pen-to-square" style="color: #ffffff;"></i>
-                </div>
-
-                <h5>Konzultace a návrh</h5>
-
-                <p>
-                  Vymyslíme řešení na míru
-                </p>
-
-              </div> -->
-
-              <!-- <div class="col process-step">
-
-                <p>huh</p>
-
-              </div> -->
-
-              <!-- <div class="col process-step">
-
-                <div class="process-step-icon">
-                  <i class="fa-solid fa-pen-to-square" style="color: #ffffff;"></i>
-                </div>
-
-                <h5>Konzultace a návrh</h5>
-
-                <p>
-                  Vymyslíme řešení na míru
-                </p>
-
-              </div> -->
-
-              <!-- <div class="col process-step">
-
-                <p>huh</p>
-
-              </div> -->
-
               <div class="col process-step">
 
                 <div class="process-step-icon">
-                  <i class="fa-solid fa-pen-to-square" style="color: #ffffff;"></i>
+                  <i class="fa-solid fa-pen-to-square"></i>
                 </div>
 
-                <h5>Konzultace a návrh</h5>
+                <h5>Konzultace a plánování</h5>
 
                 <p>
-                  Vymyslíme řešení na míru
+                  Společně vymyslíme řešení na míru
                 </p>
 
               </div>
@@ -361,13 +263,13 @@
               <div class="col process-step">
 
                 <div class="process-step-icon">
-                  <i class="fa-solid fa-pen-to-square" style="color: #ffffff;"></i>
+                  <i class="fa-solid fa-pen-to-square"></i>
                 </div>
 
-                <h5>Konzultace a návrh</h5>
+                <h5>Cenová nabídka</h5>
 
                 <p>
-                  Vymyslíme řešení na míru
+                  Připravíme jasnou a férovou kalkulaci
                 </p>
 
               </div>
@@ -381,13 +283,13 @@
               <div class="col process-step">
 
                 <div class="process-step-icon">
-                  <i class="fa-solid fa-pen-to-square" style="color: #ffffff;"></i>
+                  <i class="fa-solid fa-pen-to-square"></i>
                 </div>
 
-                <h5>Konzultace a návrh</h5>
+                <h5>Precizní provedení</h5>
 
                 <p>
-                  Vymyslíme řešení na míru
+                  Kvalitní a detailní řemeslná práce
                 </p>
 
               </div>
