--- a/src/index.html
+++ b/src/index.html
@@ -180,15 +180,21 @@
 
           <!-- <h2 class="mt-3 text-center">Od nápadu k realizaci...</h2> -->
 
-          <div class="container text-center process-container">
+          <div class="container text-center process-container ">
 
-            <div class="row row-cols-xl-5 row-cols-2 align-items-center m-4 process-first-row">
+            <div class="row row-cols-md-5 row-cols-1 align-items-center m-4 justify-content-between process-first-row">
 
-              <div class="col process-step text-center ">
+              <div class="col process-step">
 
-                <h2 class="text-center m-0 p-xl-3 align-middle">Od nápadu k realizaci...</h2>
+                <div class="process-step-icon">
+                  <i class="fa-solid fa-pen-to-square"></i>
+                </div>
 
-                <i class="fa-solid fa-arrow-down" style="color: #3b3737;"></i>
+                <h5>Konzultace a plánování</h5>
+
+                <p>
+                  Společně vymyslíme řešení na míru
+                </p>
 
               </div>
 
@@ -208,60 +214,6 @@
 
               <div class="col process-step">
 
-                <p>huh</p>
-
-              </div>
-
-              <div class="col process-step">
-
-                <div class="process-step-icon">
-                  <i class="fa-solid fa-pen-to-square"></i>
-                </div>
-
-                <h5>Rychlá realizace</h5>
-
-                <p>
-                  Dokončíme zakázku v co nejkratším termínu
-                </p>
-
-              </div>
-
-              <div class="col process-step">
-
-                <p>huh</p>
-
-              </div>
-
-            </div>
-
-            <div class="row divider">
-              <hr class="rounded">
-            </div>
-
-            <div class="row row-cols-xl-5 row-cols-2 align-items-center">
-
-              <div class="col process-step">
-
-                <div class="process-step-icon">
-                  <i class="fa-solid fa-pen-to-square"></i>
-                </div>
-
-                <h5>Konzultace a plánování</h5>
-
-                <p>
-                  Společně vymyslíme řešení na míru
-                </p>
-
-              </div>
-
-              <div class="col process-step">
-
-                <p>huh</p>
-
-              </div>
-
-              <div class="col process-step">
-
                 <div class="process-step-icon">
                   <i class="fa-solid fa-pen-to-square"></i>
                 </div>
@@ -274,11 +226,23 @@
 
               </div>
 
-              <div class="col process-step">
+            </div>
 
-                <p>huh</p>
+            <div class="row divider">
+              
+              <div class="col process-step text-center ">
+
+                <h2 class="text-center m-0 p-xl-3 align-middle">Od nápadu k realizaci...</h2>
+
+                <i class="fa-solid fa-arrow-down" style="color: #3b3737;"></i>
 
               </div>
+
+              <hr class="rounded">
+
+            </div>
+
+            <div class="row row-cols-md-5 row-cols-1 align-items-center justify-content-evenly">
 
               <div class="col process-step">
 
@@ -290,6 +254,21 @@
 
                 <p>
                   Kvalitní a detailní řemeslná práce
+                </p>
+
+              </div>
+
+
+              <div class="col process-step">
+
+                <div class="process-step-icon">
+                  <i class="fa-solid fa-pen-to-square"></i>
+                </div>
+
+                <h5>Rychlá realizace</h5>
+
+                <p>
+                  Dokončíme zakázku v co nejkratším termínu
                 </p>
 
               </div>
