feat: icons process step updated; progress added

--- a/src/index.html
+++ b/src/index.html
@@ -105,7 +105,7 @@
 
       <main>
 
-        <section id="introduction" class="introduction">
+        <section id="introduction">
 
           <div class="container-fluid introduction-container">
 
@@ -178,11 +178,19 @@
 
         <section class="process">
 
-          <!-- <h2 class="mt-3 text-center">Od nápadu k realizaci...</h2> -->
-
           <div class="container text-center process-container ">
 
-            <div class="row row-cols-md-5 row-cols-1 align-items-center m-4 justify-content-between process-first-row">
+            <div class="row process-header">
+              
+              <div class="col text-center p-0">
+
+                <h3 class="text-center mt-3 p-2 align-middle">Od nápadu k realizaci...</h3>
+
+              </div>
+
+            </div>
+
+            <div class="row row-cols-md-5 row-cols-1 align-items-center m-1 justify-content-between process-first-row">
 
               <div class="col process-step">
 
@@ -190,7 +198,7 @@
                   <i class="fa-solid fa-pen-to-square"></i>
                 </div>
 
-                <h5>Konzultace a plánování</h5>
+                <h5>1. Konzultace a plánování</h5>
 
                 <p>
                   Společně vymyslíme řešení na míru
@@ -204,7 +212,7 @@
                   <i class="fa-solid fa-cubes"></i>
                 </div>
 
-                <h5>Materiál a návrh</h5>
+                <h5>2. Materiál a návrh</h5>
 
                 <p>
                   Doporučíme správný materiál a design
@@ -215,10 +223,10 @@
               <div class="col process-step">
 
                 <div class="process-step-icon">
-                  <i class="fa-solid fa-pen-to-square"></i>
+                  <i class="fa-solid fa-calculator"></i>
                 </div>
 
-                <h5>Cenová nabídka</h5>
+                <h5>3. Cenová nabídka</h5>
 
                 <p>
                   Připravíme jasnou a férovou kalkulaci
@@ -230,27 +238,27 @@
 
             <div class="row divider">
               
-              <div class="col process-step text-center ">
+              <div class="col text-center p-0">
 
-                <h2 class="text-center m-0 p-xl-3 align-middle">Od nápadu k realizaci...</h2>
+                <div class="progress" role="progressbar" aria-label="Animated striped example" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+                  <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 50%"></div>
+                </div>
 
-                <i class="fa-solid fa-arrow-down" style="color: #3b3737;"></i>
+                <!-- <hr class="rounded"> -->
 
               </div>
 
-              <hr class="rounded">
-
             </div>
 
-            <div class="row row-cols-md-5 row-cols-1 align-items-center justify-content-evenly">
+            <div class="row row-cols-md-5 row-cols-1 align-items-center m-1 mt-3 justify-content-evenly process-second-row">
 
               <div class="col process-step">
 
                 <div class="process-step-icon">
-                  <i class="fa-solid fa-pen-to-square"></i>
+                  <i class="fa-solid fa-screwdriver-wrench"></i>
                 </div>
 
-                <h5>Precizní provedení</h5>
+                <h5>4. Precizní provedení</h5>
 
                 <p>
                   Kvalitní a detailní řemeslná práce
@@ -262,10 +270,10 @@
               <div class="col process-step">
 
                 <div class="process-step-icon">
-                  <i class="fa-solid fa-pen-to-square"></i>
+                  <i class="fa-solid fa-clock"></i>
                 </div>
 
-                <h5>Rychlá realizace</h5>
+                <h5>5. Rychlá realizace</h5>
 
                 <p>
                   Dokončíme zakázku v co nejkratším termínu
@@ -276,6 +284,12 @@
             </div>
 
           </div>
+
+
+        </section>
+
+        <section id="galerry">
+
 
 
         </section>
