feat: start gallery section

--- a/src/index.html
+++ b/src/index.html
@@ -49,7 +49,7 @@
 
                 <li class="nav-item">
 
-                  <a class="nav-link" href="#">Galerie</a>
+                  <a class="nav-link" href="#gallery">Galerie</a>
 
                 </li>
 
@@ -192,7 +192,7 @@
 
             <div class="row row-cols-md-5 row-cols-1 align-items-center m-1 justify-content-between process-first-row">
 
-              <div class="col process-step">
+              <div class="col process-step-first-row">
 
                 <div class="process-step-icon">
                   <i class="fa-solid fa-pen-to-square"></i>
@@ -206,7 +206,7 @@
 
               </div>
 
-              <div class="col process-step">
+              <div class="col process-step-first-row">
 
                 <div class="process-step-icon">
                   <i class="fa-solid fa-cubes"></i>
@@ -220,7 +220,7 @@
 
               </div>
 
-              <div class="col process-step">
+              <div class="col process-step-first-row">
 
                 <div class="process-step-icon">
                   <i class="fa-solid fa-calculator"></i>
@@ -236,23 +236,9 @@
 
             </div>
 
-            <div class="row divider">
-              
-              <div class="col text-center p-0">
-
-                <div class="progress" role="progressbar" aria-label="Animated striped example" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
-                  <div class="progress-bar progress-bar-striped progress-bar-animated" style="width: 50%"></div>
-                </div>
-
-                <!-- <hr class="rounded"> -->
-
-              </div>
-
-            </div>
-
             <div class="row row-cols-md-5 row-cols-1 align-items-center m-1 mt-3 justify-content-evenly process-second-row">
 
-              <div class="col process-step">
+              <div class="col process-step-second-row">
 
                 <div class="process-step-icon">
                   <i class="fa-solid fa-screwdriver-wrench"></i>
@@ -267,7 +253,7 @@
               </div>
 
 
-              <div class="col process-step">
+              <div class="col process-step-second-row">
 
                 <div class="process-step-icon">
                   <i class="fa-solid fa-clock"></i>
@@ -285,12 +271,65 @@
 
           </div>
 
+          <div class="waypoint"></div>
+
 
         </section>
 
-        <section id="galerry">
+        <section id="gallery" class="mt-5">
 
+          <div class="container text-center galerry-container">
 
+            <div class="row gallery-tabs">
+              
+              <div class="col p-0">
+
+                <h3 class="m-0">Galerie</h3>
+
+              </div>
+
+              <div class="col text-center p-0">
+
+                <ul class="nav nav-tabs">
+                  <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Active</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Link</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Link</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                  </li>
+                </ul>
+
+              </div>
+
+            </div>
+
+            <div class="row row-cols-md-3 row-cols-1 align-items-center m-1">
+
+              <div class="col">
+
+                <img src="./imgs/galery-imgs/big/100.jpg" class="img-fluid" alt="galerry img of rail">
+
+              </div>
+
+              <div class="col">
+
+                <img src="./imgs/galery-imgs/big/103.jpg" class="img-fluid" alt="galerry img of rail">
+
+              </div>
+
+              <div class="col">
+
+                <img src="./imgs/galery-imgs/big/117.jpg" class="img-fluid" alt="galerry img of rail">
+
+              </div>
+
+            </div>
 
         </section>
 
