feat: gallery show-more prepared

--- a/src/index.html
+++ b/src/index.html
@@ -280,28 +280,35 @@
 
           <div class="container text-center galerry-container">
 
-            <div class="row gallery-tabs">
+            <div class="row gallery-tabs align-items-center">
               
               <div class="col p-0">
 
-                <h3 class="m-0">Galerie</h3>
+                <h3 class="m-0">Ukázky naší práce</h3>
 
               </div>
 
-              <div class="col text-center p-0">
+            </div>
 
-                <ul class="nav nav-tabs">
+            <div class="row gallery-tabs align-items-center">
+
+              <div class="col text-center p-0 mt-3">
+
+                <ul class="nav nav-tabs justify-content-center">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Active</a>
+                    <a class="nav-link active" href="#">Vše</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
+                    <a class="nav-link" href="#">Interiérové zábradlí</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
+                    <a class="nav-link" href="#">Schodišťové zábradlí</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+                    <a class="nav-link active" href="#">Venkovní zábradlí</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Zábradlí před francouzská okna</a>
                   </li>
                 </ul>
 
@@ -309,7 +316,7 @@
 
             </div>
 
-            <div class="row row-cols-md-3 row-cols-1 align-items-center m-1">
+            <div class="row row-cols-md-3 row-cols-1 gy-3 gx-3 mt-1">
 
               <div class="col">
 
@@ -326,6 +333,49 @@
               <div class="col">
 
                 <img src="./imgs/galery-imgs/big/117.jpg" class="img-fluid" alt="galerry img of rail">
+
+              </div>
+
+              <div class="col">
+
+                <img src="./imgs/galery-imgs/big/146.jpg" class="img-fluid" alt="galerry img of rail">
+
+              </div>
+
+              <div class="col">
+
+                <img src="./imgs/galery-imgs/big/124.jpg" class="img-fluid" alt="galerry img of rail">
+
+              </div>
+
+              <div class="col">
+
+                <img src="./imgs/galery-imgs/big/151.jpg" class="img-fluid" alt="galerry img of rail">
+
+              </div>
+
+              <div class="col">
+
+                <img src="./imgs/galery-imgs/big/136.jpg" class="img-fluid" alt="galerry img of rail">
+
+              </div>
+
+              <div class="col">
+
+                <img src="./imgs/galery-imgs/big/149.jpg" class="img-fluid" alt="galerry img of rail">
+
+              </div>
+
+              <div class="col">
+
+                <div class="show-more-container">
+                  <img src="./imgs/galery-imgs/big/131.jpg" class="img-fluid show-more-img" alt="galerry img of rail">
+
+                  <div class="centered show-more-text">
+                    <h5 class="lead">Zobrazit více</h5>
+                  </div>
+
+                </div>
 
               </div>
 
