feat: gallery hover animation

--- a/src/index.html
+++ b/src/index.html
@@ -198,7 +198,7 @@
                   <i class="fa-solid fa-pen-to-square"></i>
                 </div>
 
-                <h5>1. Konzultace a plánování</h5>
+                <h5 class="mt-2">1. Konzultace a plánování</h5>
 
                 <p>
                   Společně vymyslíme řešení na míru
@@ -212,7 +212,7 @@
                   <i class="fa-solid fa-cubes"></i>
                 </div>
 
-                <h5>2. Materiál a návrh</h5>
+                <h5 class="mt-2">2. Materiál a návrh</h5>
 
                 <p>
                   Doporučíme správný materiál a design
@@ -226,7 +226,7 @@
                   <i class="fa-solid fa-calculator"></i>
                 </div>
 
-                <h5>3. Cenová nabídka</h5>
+                <h5 class="mt-2">3. Cenová nabídka</h5>
 
                 <p>
                   Připravíme jasnou a férovou kalkulaci
@@ -244,7 +244,7 @@
                   <i class="fa-solid fa-screwdriver-wrench"></i>
                 </div>
 
-                <h5>4. Precizní provedení</h5>
+                <h5 class="mt-2">4. Precizní provedení</h5>
 
                 <p>
                   Kvalitní a detailní řemeslná práce
@@ -259,7 +259,7 @@
                   <i class="fa-solid fa-clock"></i>
                 </div>
 
-                <h5>5. Rychlá realizace</h5>
+                <h5 class="mt-2">5. Rychlá realizace</h5>
 
                 <p>
                   Dokončíme zakázku v co nejkratším termínu
@@ -284,7 +284,7 @@
               
               <div class="col p-0">
 
-                <h3 class="m-0">Ukázky naší práce</h3>
+                <h3 class="mt-2">Ukázky naší práce</h3>
 
               </div>
 
@@ -372,7 +372,8 @@
                   <img src="./imgs/galery-imgs/big/131.jpg" class="img-fluid show-more-img" alt="galerry img of rail">
 
                   <div class="centered show-more-text">
-                    <h5 class="lead">Zobrazit více</h5>
+
+                    <button class="btn btn-primary btn-lg btn-request-quote" type="submit">Zobrazit více</button>
                   </div>
 
                 </div>
