--- a/src/index.html
+++ b/src/index.html
@@ -276,9 +276,9 @@
 
         </section>
 
-        <section id="gallery" class="mt-5">
+        <section id="gallery" class="pt-5 mt-3">
 
-          <div class="container text-center galerry-container">
+          <div class="container text-center galerry-container ">
 
             <div class="row gallery-tabs align-items-center">
               
@@ -316,11 +316,11 @@
 
             </div>
 
-            <div class="row row-cols-md-3 row-cols-1 gy-3 gx-3 mt-1">
+            <div id="galerry-all" class="row row-cols-md-3 row-cols-1 gy-3 gx-3 mt-1">
 
               <div class="col">
 
-                <img src="./imgs/galery-imgs/big/100.jpg" class="img-fluid" alt="galerry img of rail">
+                <img src="./imgs/galery-imgs/big/147.jpg" class="img-fluid" alt="galerry img of rail">
 
               </div>
 
@@ -356,7 +356,7 @@
 
               <div class="col">
 
-                <img src="./imgs/galery-imgs/big/136.jpg" class="img-fluid" alt="galerry img of rail">
+                <img src="./imgs/galery-imgs/big/137.jpg" class="img-fluid" alt="galerry img of rail">
 
               </div>
 
@@ -373,14 +373,295 @@
 
                   <div class="centered show-more-text">
 
-                    <button class="btn btn-primary btn-lg btn-request-quote" type="submit">Zobrazit více</button>
+                    <button class="btn btn-primary btn-lg btn-show-more" type="submit">Zobrazit více</button>
+
                   </div>
 
                 </div>
 
               </div>
 
+              <div class="col more-img">
+
+                <img src="./imgs/galery-imgs/big/130.jpg" class="img-fluid" alt="galerry img of rail">
+
+              </div>
+
+              <div class="col more-img">
+
+                <img src="./imgs/galery-imgs/big/94.jpg" class="img-fluid" alt="galerry img of rail">
+
+              </div>
+
+              <div class="col more-img">
+
+                <img src="./imgs/galery-imgs/big/105.jpg" class="img-fluid" alt="galerry img of rail">
+
+              </div>
+
+              <div class="col more-img">
+
+                <img src="./imgs/galery-imgs/big/115.jpg" class="img-fluid" alt="galerry img of rail">
+
+              </div>
+
+              <div class="col more-img">
+
+                <img src="./imgs/galery-imgs/big/154.jpg" class="img-fluid" alt="galerry img of rail">
+
+              </div>
+
+              <div class="col more-img">
+
+                <img src="./imgs/galery-imgs/big/150.jpg" class="img-fluid" alt="galerry img of rail">
+
+              </div>
+
+              <div class="col more-img">
+
+                <img src="./imgs/galery-imgs/big/134.jpg" class="img-fluid" alt="galerry img of rail">
+
+              </div>
+
+              <div class="col more-img">
+
+                <img src="./imgs/galery-imgs/big/141.jpg" class="img-fluid" alt="galerry img of rail">
+
+              </div>
+
+              <div class="col more-img">
+
+                <img src="./imgs/galery-imgs/big/98.jpg" class="img-fluid" alt="galerry img of rail">
+
+              </div>
+
+              <div class="col more-img">
+
+                <img src="./imgs/galery-imgs/big/125.jpg" class="img-fluid" alt="galerry img of rail">
+
+              </div>
+
+              <div class="col more-img">
+
+                <img src="./imgs/galery-imgs/big/95.jpg" class="img-fluid" alt="galerry img of rail">
+
+              </div>
+
+              <div class="col more-img">
+
+                <img src="./imgs/galery-imgs/big/102.jpg" class="img-fluid" alt="galerry img of rail">
+
+              </div>
+
+              <div class="col more-img">
+
+                <img src="./imgs/galery-imgs/big/111.jpg" class="img-fluid" alt="galerry img of rail">
+
+              </div>
+
+              <div class="col more-img">
+
+                <img src="./imgs/galery-imgs/big/96.jpg" class="img-fluid" alt="galerry img of rail">
+
+              </div>
+
+              <div class="col more-img">
+
+                <img src="./imgs/galery-imgs/big/97.jpg" class="img-fluid" alt="galerry img of rail">
+
+              </div>
+
+              <div class="col more-img">
+
+                <img src="./imgs/galery-imgs/big/99.jpg" class="img-fluid" alt="galerry img of rail">
+
+              </div>
+
+              <div class="col more-img">
+
+                <img src="./imgs/galery-imgs/big/100.jpg" class="img-fluid" alt="galerry img of rail">
+
+              </div>
+
+              <div class="col more-img">
+
+                <img src="./imgs/galery-imgs/big/104.jpg" class="img-fluid" alt="galerry img of rail">
+
+              </div>
+
+              <div class="col more-img">
+
+                <img src="./imgs/galery-imgs/big/106.jpg" class="img-fluid" alt="galerry img of rail">
+
+              </div>
+
+              <div class="col more-img">
+
+                <img src="./imgs/galery-imgs/big/113.jpg" class="img-fluid" alt="galerry img of rail">
+
+              </div>
+
+              <div class="col more-img">
+
+                <img src="./imgs/galery-imgs/big/114.jpg" class="img-fluid" alt="galerry img of rail">
+
+              </div>
+
+              <div class="col more-img">
+
+                <img src="./imgs/galery-imgs/big/118.jpg" class="img-fluid" alt="galerry img of rail">
+
+              </div>
+
+              <div class="col more-img">
+
+                <img src="./imgs/galery-imgs/big/119.jpg" class="img-fluid" alt="galerry img of rail">
+
+              </div>
+
+              <div class="col more-img">
+
+                <img src="./imgs/galery-imgs/big/120.jpg" class="img-fluid" alt="galerry img of rail">
+
+              </div>
+
+              <div class="col more-img">
+
+                <img src="./imgs/galery-imgs/big/121.jpg" class="img-fluid" alt="galerry img of rail">
+
+              </div>
+
+              <div class="col more-img">
+
+                <img src="./imgs/galery-imgs/big/122.jpg" class="img-fluid" alt="galerry img of rail">
+
+              </div>
+
+              <div class="col more-img">
+
+                <img src="./imgs/galery-imgs/big/123.jpg" class="img-fluid" alt="galerry img of rail">
+
+              </div>
+
+              <div class="col more-img">
+
+                <img src="./imgs/galery-imgs/big/126.jpg" class="img-fluid" alt="galerry img of rail">
+
+              </div>
+
+              <div class="col more-img">
+
+                <img src="./imgs/galery-imgs/big/127.jpg" class="img-fluid" alt="galerry img of rail">
+
+              </div>
+
+              <div class="col more-img">
+
+                <img src="./imgs/galery-imgs/big/128.jpg" class="img-fluid" alt="galerry img of rail">
+
+              </div>
+
+              <div class="col more-img">
+
+                <img src="./imgs/galery-imgs/big/129.jpg" class="img-fluid" alt="galerry img of rail">
+
+              </div>
+
+              <div class="col more-img">
+
+                <img src="./imgs/galery-imgs/big/133.jpg" class="img-fluid" alt="galerry img of rail">
+
+              </div>
+
+              <div class="col more-img">
+
+                <img src="./imgs/galery-imgs/big/139.jpg" class="img-fluid" alt="galerry img of rail">
+
+              </div>
+
+              <div class="col more-img">
+
+                <img src="./imgs/galery-imgs/big/142.jpg" class="img-fluid" alt="galerry img of rail">
+
+              </div>
+
+              <div class="col more-img">
+
+                <img src="./imgs/galery-imgs/big/152.jpg" class="img-fluid" alt="galerry img of rail">
+
+              </div>
+
+              <div class="col more-img">
+
+                <img src="./imgs/galery-imgs/big/153.jpg" class="img-fluid" alt="galerry img of rail">
+
+              </div>
+
+              <div class="col more-img">
+
+                <img src="./imgs/galery-imgs/big/110.jpg" class="img-fluid" alt="galerry img of rail">
+
+              </div>
+
+              <div class="col more-img">
+
+                <img src="./imgs/galery-imgs/big/116.jpg" class="img-fluid" alt="galerry img of rail">
+
+              </div>
+
+              <div class="col more-img">
+
+                <img src="./imgs/galery-imgs/big/132.jpg" class="img-fluid" alt="galerry img of rail">
+
+              </div>
+
+              <div class="col more-img">
+
+                <img src="./imgs/galery-imgs/big/135.jpg" class="img-fluid" alt="galerry img of rail">
+
+              </div>
+
+              <div class="col more-img">
+
+                <img src="./imgs/galery-imgs/big/140.jpg" class="img-fluid" alt="galerry img of rail">
+
+              </div>
+
+              <div class="col more-img">
+
+                <img src="./imgs/galery-imgs/big/144.jpg" class="img-fluid" alt="galerry img of rail">
+
+              </div>
+
+              <div class="col more-img">
+
+                <img src="./imgs/galery-imgs/big/145.jpg" class="img-fluid" alt="galerry img of rail">
+
+              </div>
+
+              <div class="col more-img">
+
+                <img src="./imgs/galery-imgs/big/148.jpg" class="img-fluid" alt="galerry img of rail">
+
+              </div>
+
             </div>
+
+            <div class="row">
+
+              <div class="show-less-container">
+
+                <div class="centered show-more-text sticky-bottom">
+
+                  <button class="btn btn-primary btn-lg btn-show-more" type="submit">Zobrazit více</button>
+
+                </div>
+
+              </div>
+
+            </div>
+
+
 
         </section>
 
