feat: show-less button

--- a/src/index.html
+++ b/src/index.html
@@ -276,7 +276,7 @@
 
         </section>
 
-        <section id="gallery" class="pt-5 mt-3">
+        <section id="gallery" class="pt-3 mt-3">
 
           <div class="container text-center galerry-container ">
 
@@ -316,7 +316,7 @@
 
             </div>
 
-            <div id="galerry-all" class="row row-cols-md-3 row-cols-1 gy-3 gx-3 mt-1">
+            <div id="galerry-all" class="row row-cols-md-3 row-cols-1 gy-3 gx-3 mt-1 mb-2">
 
               <div class="col">
 
@@ -653,7 +653,7 @@
 
                 <div class="centered show-more-text sticky-bottom">
 
-                  <button class="btn btn-primary btn-lg btn-show-more" type="submit">Zobrazit více</button>
+                  <button class="btn btn-primary btn-lg btn-show-more" type="submit">Zobrazit méně</button>
 
                 </div>
 
@@ -661,7 +661,7 @@
 
             </div>
 
-
+          <button class="btn btn-primary btn-lg btn-show-less sticky-bottom mb-2" type="submit">Zobrazit méně</button>
 
         </section>
 
