feat: introduce vue gallery

--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,8 @@
       <title>Zábradlí Hanák - nerezové zábradlí a schodište</title>
       <script defer type="module" src="./js/main.js"></script>
   </head>
-
   <body>
-    <div id="app"></div>          
+    <div id="app"></div>   
+    <!-- built files will be auto injected -->       
   </body>
 </html>
