--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
       <meta name="description" content="" />
       <meta name="author" content="" />
+      <link rel="icon" type="image/x-icon" href="./imgs/favicon.ico"/>
       <title>Zábradlí Hanák - nerezové zábradlí a schodište</title>
       <script defer type="module" src="./js/main.js"></script>
   </head>
