feat: add scrollspy

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
       <title>Zábradlí Hanák - nerezové zábradlí a schodište</title>
       <script defer type="module" src="./js/main.js"></script>
   </head>
-  <body>
+  <body data-bs-spy="scroll" data-bs-target="#mainNavbar">
     <div id="app"></div>   
     <!-- built files will be auto injected -->       
   </body>
