--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
       <link rel="icon" type="image/x-icon" href="./imgs/favicon.ico"/>
       <title>Zábradlí Hanák - nerezové zábradlí a schodište</title>
       <script defer type="module" src="./js/main.js"></script>
-      <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script> 
+      <script defer src="https://challenges.cloudflare.com/turnstile/v0/api.js"></script> 
   </head>
   <body data-bs-spy="scroll" data-bs-target="#mainNavbar">
     <div id="app"></div>   
