feat: seo meta tags and refactor

--- a/src/index.html
+++ b/src/index.html
@@ -4,13 +4,12 @@
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
       <meta name="description" content="" />
-      <meta name="author" content="" />
+      <meta name="author" content="W3Design" />
       <link rel="icon" type="image/x-icon" href="./imgs/favicon.ico"/>
       <title>Zábradlí Hanák - nerezové zábradlí a schodište</title>
       <script defer type="module" src="./js/main.js"></script>
   </head>
   <body data-bs-spy="scroll" data-bs-target="#mainNavbar">
-    <div id="app"></div>   
-    <!-- built files will be auto injected -->       
+    <div id="app"></div>      
   </body>
 </html>
