--- a/src/index.html
+++ b/src/index.html
@@ -3,13 +3,13 @@
   <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-      <meta name="description" content="" />
+      <meta name="description" content="Zakázková výroba schodišť a zábradlí - Specializujeme se na nerez, hliník a sklo. Precizní řemeslné zpracování a individuální přístup jsou pro nás samozřejmostí." />
       <meta name="author" content="W3Design" />
       <link rel="icon" type="image/x-icon" href="./imgs/favicon.ico"/>
       <title>Zábradlí Hanák - nerezové zábradlí a schodište</title>
       <script defer type="module" src="./js/main.js"></script>
   </head>
   <body data-bs-spy="scroll" data-bs-target="#mainNavbar">
-    <div id="app"></div>      
+    <div id="app"></div>
   </body>
 </html>
